fix overlapping labels on mobile view

--- a/frontend/src/style/styles.scss
+++ b/frontend/src/style/styles.scss
@@ -58,7 +58,7 @@ body pzsh-backdrop {
 }
 
 .text-small {
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 .dialog {
